src/parser/snapshots/monkey_language_server__parser__test__prefix_happy_3.snap
---
source: src/parser/test.rs
description: let b = !true;
expression: result
---
[
    Let {
        token: Token(Let, "let", (0,0)->(0,3)),
        name: Identifier {
            token: Token(Identifier, "b", (0,4)->(0,5)),
            name: "b",
        },
        value: Prefix {
            token: Token(Bang, "!", (0,8)->(0,9)),
            right: Bool {
                token: Token(True, "true", (0,9)->(0,13)),
                value: true,
            },
            operator: Bang,
        },
    },
]

===================================

let b = !true;
