src/parser/snapshots/monkey_language_server__parser__test__prefix_unhappy_1.snap
---
source: src/parser/test.rs
description: "-@"
expression: result
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,1)->(0,2)),
]

===================================

-@
 ^ [Error] SyntaxError: Unexpected '@'.
