src/parser/snapshots/monkey_language_server__parser__test__return_happy_4.snap
---
source: src/parser/test.rs
description: return 1 + 1;
expression: result
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: Some(
            Ok(
                Infix {
                    token: Token(Plus, "+", (0,9)->(0,10)),
                    left: Int {
                        token: Token(Int, "1", (0,7)->(0,8)),
                        value: 1,
                    },
                    right: Int {
                        token: Token(Int, "1", (0,11)->(0,12)),
                        value: 1,
                    },
                    operator: Plus,
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 7,
                        },
                        end: Position {
                            line: 0,
                            character: 12,
                        },
                    },
                },
            ),
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 13,
            },
        },
    },
]

===================================

return 1 + 1;
