src/parser/snapshots/monkey_language_server__parser__test__return_happy_4_errors.snap
---
source: src/parser/test.rs
description: return 1 + 1;
expression: "parser_errors(\"return 1 + 1;\", errors)"
---
return 1 + 1;
