src/parser/snapshots/monkey_language_server__parser__test__return_unhappy_3.snap
---
source: src/parser/test.rs
description: "return [;"
expression: result
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: Some(
            Err(
                Err(ExpectedTokenNotFound("SyntaxError: Expected ']' not found."), (0,8)->(0,9)),
            ),
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 9,
            },
        },
    },
]

===================================

return [;
        ^ [Error] SyntaxError: Expected ']' not found.
